# Stock-Price-Prediction

./: Dockerfile  docker-compose.yaml  pyproject.toml
src/: app.py  consumer.py  producer.py
src/models/: __init__.py  database.py  settings.py
src/services/: buffer_recovery.py  data_buffer.py  database_service.py  feature_store.py  kafka_services.py  redis_service.py  stock_data_processor.py  technical_indicators.py
